--- a/src/main/java/ua/edu/ukma/fido/front/loginpage.css
+++ b/src/main/java/ua/edu/ukma/fido/front/loginpage.css
@@ -1,6 +1,6 @@
 body {
     background-color: rgb(238, 197, 147);
-    background-image: url("img/boxes.jpg");
+    background-image: url("boxes.jpg");
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -9,17 +9,18 @@ input[type=password] {
     width: 100%;
     padding: 12px 20px;
     margin-bottom: 20px;
-    margin-top: 10px;
+    margin-top: 20px;
     display: inline-block;
     border: 1px solid #ccc;
     box-sizing: border-box;
 }
 
+/* Set a style for all buttons */
 button {
     background-color: #04AA6D;
     color: white;
     padding: 14px 20px;
-    margin-top: 10px;
+    margin-top: 20px;
     border: none;
     cursor: pointer;
     width: 100%;
@@ -29,16 +30,30 @@ button:hover {
     opacity: 0.8;
 }
 
+.imgcontainer {
+    text-align: center;
+    margin: 24px 0 12px 0;
+}
+
+.logo {
+    width: 100px;
+}
+
 .container {
     padding: 30px;
     background-color: #f8f8f8;
     border-radius: 10px;
     border: 1px solid rgb(112, 112, 112);
     width: 300px;
-    /* or whatever width you want. */
     max-width: 300px;
     position: fixed;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -70%);
+    transform: translate(-50%, -50%);
+}
+figcaption {
+    font-family: Brush Script MT, Brush Script Std, cursive;
+    font-size: 25px;
+    font-weight: bolder;
+    color:rgb(165, 91, 42);
 }
